--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "webpack"
+    "start" : "webpack",
+    "database" : "json-server --watch database.json"
   },
   "keywords": [],
   "author": "",
